--- a/pages/executive-dashboard.html
+++ b/pages/executive-dashboard.html
@@ -32,6 +32,7 @@
       <table border="1" id="data-table">
         <thead>
           <tr>
+            <th>Candidate ID</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Phone</th>
@@ -44,11 +45,19 @@
             <th>Certificates</th>
             <th>Skills</th>
             <th>Resume</th>
+            <th>View Evaluation</th> <!-- New Column -->
           </tr>
         </thead>
         <tbody></tbody>
       </table>
     </div>
+
+    <!-- Evaluation Report Display -->
+    <div id="evaluationReport" style="display: none;">
+      <h2>Candidate Evaluation</h2>
+      <div id="reportContainer"></div>
+    </div>
+
   </div>
 
   <script src="../js/datafetch.js"></script> <!-- Link to external JS -->
