--- a/pages/employer.html
+++ b/pages/employer.html
@@ -34,6 +34,15 @@
         </div>
 
         <div class="form-group">
+            <label>Organization Level</label>
+            <select class="form-control" id="organizationLevel">
+                <option value="Junior">Junior</option>
+                <option value="Senior">Senior</option>
+                <option value="Management">Management</option>
+            </select>
+        </div>
+
+        <div class="form-group">
             <label>Experience in Field</label>
             <select class="form-control" id="experience">
                 <option value="1-2">1-2 years</option>
@@ -67,25 +76,18 @@
             <button type="button" class="btn btn-sm btn-primary" onclick="addTool()">Add Tool</button>
         </div>
 
-        <div class="form-group">
-            <label>Organization Level</label>
-            <select class="form-control" id="organizationLevel">
-                <option value="Junior">Junior</option>
-                <option value="Senior">Senior</option>
-                <option value="Management">Management</option>
-            </select>
-        </div>
+        
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label>Attitude</label>
             <select class="form-control" id="attitude">
                 <option value="Driven">Driven</option>
                 <option value="Cost Effective">Cost Effective</option>
             </select>
-        </div>
+        </div> -->
 
         <div class="form-group">
-            <label>Comments</label>
+            <label>About the Company</label>
             <textarea class="form-control" id="comments"></textarea>
         </div>
 
@@ -146,7 +148,7 @@ async function submitForm() {
     formData.append("education", document.getElementById('education').value);
     formData.append("locationZip", document.getElementById('locationZip').value);
     formData.append("organizationLevel", document.getElementById('organizationLevel').value);
-    formData.append("attitude", document.getElementById('attitude').value);
+    // formData.append("attitude", document.getElementById('attitude').value);
     formData.append("comments", document.getElementById('comments').value);
     formData.append("jobDescription", document.getElementById('jobDescription').value);
 
